Add OpenTracing command listener to Mongo client.
- Add the link to include the dependency in the pom.xml
- Remove the BuildStep to index the opentracing-mongo dependency
- Remove the filter of the CommandListener implementors list
- Fix Format for the pom.xml dependency

--- a/docs/src/main/asciidoc/mongodb.adoc
+++ b/docs/src/main/asciidoc/mongodb.adoc
@@ -599,7 +599,7 @@ When using link:microprofile-metrics[SmallRye Metrics], connection pool metrics 
 == Tracing
 
 If you are using the `quarkus-smallrye-opentracing` extension, `quarkus-mongodb-client` can register traces about the commands executed.
-This behavior must first be enabled by setting the `quarkus.mongodb.tracing.enabled` property to `true` in your `application.properties`.
+This behavior must be enabled by setting the `quarkus.mongodb.tracing.enabled` property to `true` in your `application.properties` and adding the dependency `io.opentracing.contrib:opentracing-mongo-common` to your pom.xml (for more info read the link:opentracing#mongodb-client[MongoDB client])
 
 Read the link:opentracing[OpenTracing] guide, to configure and how to use the jaeger tracer.
 
